--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.21.8",
